<resources>
    <string name="app_name">AlNiqasha Supplier</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="username_or_email">Username/Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account_yet">Do not have an account yet ?</string>
    <string name="after_completing_your_registration_enjoy_browsing_our_services_and_features">After completing your registration, enjoy browsing our services and features.</string>
    <string name="already_have_an_account">Do you already have an account?</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="please_enter_your_username_or_emailaddress">Please enter your username/email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_confirm_password">Please enter your confirm password</string>
    <string name="invalid_password">"Invalid Password"</string>
    <string name="enter_your_email_address_and_we_will_be_sending_you_instructions_on_how_to_reset_your_password">Enter your email address and we will be sending you instructions on how to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="password_doesnt_match_with_verify_password">Password doesn\'t match with verify password</string>
    <string name="please_first_enter_your_password">please first enter your password</string>
    <string name="please_enter_your_full_name">Please enter your full name</string>
    <string name="emojis_are_not_allowed">Emoji\'s are not allowed</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="mob_num_length_valid">"Phone number must be 7 – 15 digits"</string>
    <string name="please_enter_valid_email">Please enter valid email address</string>
    <string name="please_enter_valid_emirates">Please enter valid emirates</string>
    <string name="please_click_back_again_to_exist">Please click BACK again to exit</string>
    <string name="please_enter_valid_loc">Please enter valid location</string>
    <string name="password_length_valid">Password must contain atleast \n * One uppercase letter \n * One lowercase letter \n * One number \n * Atleast 6 characters long</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_verification_text">We have sent a 4-Digit code to your registered mobile number. Please enter the code below.</string>
    <string name="didn_t_received_any_code">Didn\'t received any code?</string>
    <string name="resend">Resend</string>
    <string name="please_enter_your_otp">Please enter your otp</string>
    <string name="otp_length_valid">Otp length should be equal to 4 characters</string>
    <string name="featured_naqashat">Featured Naqashat</string>
    <string name="enter_keywords">Enter keywords</string>
    <string name="filter_search">Filter Search</string>
    <string name="services">Services</string>
    <string name="location">Location</string>
    <string name="your_location">Your Location</string>
    <string name="location_1">Location</string>
    <string name="low_high">Low - High</string>
    <string name="high_low">High - Low</string>
    <string name="nearby">Nearby</string>
    <string name="view_by">View by</string>
    <string name="offers_and_discounts">Offers and Discounts:</string>
    <string name="supplier_name">Supplier name</string>
    <string name="category">Category:</string>
    <string name="bookings_history">Bookings History</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="complete_booking">Complete Booking</string>
    <string name="accepted">Accepted</string>
    <string name="cancelled">Cancelled</string>
    <string name="book_service">Book Service</string>
    <string name="payment">Payment</string>
    <string name="how_many_ladies">How many ladies?</string>
    <string name="how_many_childrens">How many childrens?</string>
    <string name="booking_date_time">Booking date/time</string>
    <string name="special_request">Special Request</string>
    <string name="add_new_card">Add New Card</string>
    <string name="emirates">Emirates</string>
    <string name="featured">Featured</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="revenues">Revenues</string>
    <string name="my_cards">My Cards</string>
    <string name="my_location">My Location</string>
    <string name="languages">Languages</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="privacy_and_policy">Privacy policy</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="help_page">Help page</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="membership_status">Membership Status</string>
    <string name="view_all">View All</string>
    <string name="do_you_want_to_become_a_featured_henna">Do you want to become a featured henna?</string>
    <string name="basic_membership">Basic Membership</string>
    <string name="expiration_date">Expiration date</string>
    <string name="current_bookings">Current Bookings</string>
    <string name="featured_membership">Featured Membership</string>
    <string name="service_desc" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="subscribe">Subscribe</string>
    <string name="membership">Membership</string>
    <string name="add_new_featured">Add new featured</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="booking_details">Booking Details</string>
    <string name="status">Status</string>
    <string name="ladies">Ladies</string>
    <string name="childrens">Childrens</string>
    <string name="total">Total</string>
    <string name="service_fee">Service Fee</string>
    <string name="sub_total">Sub total</string>
    <string name="total_cost">Total Cost</string>
    <string name="reason_for_cancellation">Reason for cancellation:</string>
    <string name="please_provide_a_valid_reason_for_your_refusal">Please provide a valid reason for your refusal</string>
    <string name="follow">Follow</string>
    <string name="gallery">Gallery</string>
    <string name="reviews">Reviews</string>
    <string name="write_a_review">Write a review</string>
    <string name="enter_your_review_here">Enter your review here</string>
    <string name="add_new_offers">Add offers</string>
    <string name="add_new_service">Add new service</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="service_name">Service name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="choose_services">Choose the service</string>
    <string name="offer_price">Offer Price</string>
    <string name="enter_keywords_here">Enter keywords here</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="apply">Apply</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_name">Bank Name</string>
    <string name="full_name">Full Name</string>
    <string name="account_number">Account Number</string>
    <string name="iban">IBAN</string>
    <string name="edit">Edit</string>
    <string name="general_information">General Information</string>
    <string name="message">Message</string>
    <string name="good_day_nhow_can_we_help_you_today">Good day!  How can we help you today?</string>
    <string name="need_more_help">Need more help?</string>
    <string name="faq_page">FAQ PAGE</string>
    <string name="admin_chat">Admin Chat</string>
    <string name="enter_message">Enter message</string>
    <string name="membership_registration">Membership Registration</string>
    <string name="register">Register</string>
    <string name="card_title">Card Title</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="save_card">Save Card</string>
    <string name="choose_language">Choose Language</string>
    <string name="arabic">Arabic</string>
    <string name="english" translatable="false">English</string>
    <string name="english1" translatable="false">English</string>
    <string name="welcome_please_log_in_your_credentials_to_continue">Welcome! Please log in your credentials to continue.</string>
    <string name="intro_page_1_txt">Subscribe and learn about the most professional henna artists</string>
    <string name="intro_page_2_txt">Adorn your look and stand out with the most beautiful henna designs</string>
    <string name="intro_page_3_txt">Special offers on all types of henna</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="edit_card">Edit Card</string>
    <string name="delete_card">Delete Card</string>
    <string name="add_new_address">Add new address</string>
    <string name="saved_address">Saved Address</string>
    <string name="please_choose_your_language">Please choose your language</string>
    <string name="verify_password_length_valid">Verify password length should be minimum 6 characters long</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo">Add photo !!</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="google_map_api_key" translatable="false">AIzaSyDkgKQar2q0dYk28l8Ch9smAVgDrGPMqZI</string>
    <string name="places_api_key" translatable="false">AIzaSyCh5hBReaLSROrja5l_F4k8a30c18lM9sE</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="please_verify_your_password">Please verify your password</string>
    <string name="continue_btn">Continue</string>
    <string name="please_login_signup_to_access_this_functionality">Please Login/Sign Up to access this functionality</string>
    <string name="title">Title</string>
    <string name="flat_villa">Flat / Villa</string>
    <string name="building_name">Building Name</string>
    <string name="street_area">Street / Area</string>
    <string name="select_country">Select Country</string>
    <string name="set_as_default">Set as default address</string>
    <string name="enter_your_title">Enter your title</string>
    <string name="enter_flat_villa">Enter flat/villa</string>
    <string name="enter_building_name">Enter building name</string>
    <string name="enter_your_street_area">Enter your street/area</string>
</resources>