<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gold">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userIcon"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/user"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
       android:fontFamily="@font/avenir_medium"
        android:includeFontPadding="false"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="@id/userIcon"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:maxLines="1"
        android:maxLength="15"
        android:ellipsize="end"
        android:text="@string/username"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_medium"
        android:includeFontPadding="false"
        android:gravity="end"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="@id/tv_name"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="#F1F1F1"
        android:textSize="@dimen/_9ssp"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/location"/>

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_medium"
        android:includeFontPadding="false"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_9ssp"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/saved_address"/>



</androidx.constraintlayout.widget.ConstraintLayout>