<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".bottomsheets.AddAddressBottomSheetFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_12sdp">
            <LinearLayout
                android:id="@+id/flat_villa_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flat_villa"
                    android:textColor="@color/gold"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/avenir_medium"
                    android:gravity="center_vertical"
                    android:textStyle="normal"
                    android:textSize="@dimen/_12ssp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_flat_villa"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/enter_flat_villa"
                    android:textColorHint="@color/gold"
                    android:layout_marginTop="@dimen/_6sdp"
                    app:backgroundTint="@color/gold"
                    android:inputType="text"
                    android:fontFamily="@font/avenir_medium"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textColor="@color/gold"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11ssp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/building_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/flat_villa_layout"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/building_name"
                    android:textColor="@color/gold"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/avenir_medium"
                    android:gravity="center_vertical"
                    android:textStyle="normal"
                    android:textSize="@dimen/_12ssp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_building_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/enter_building_name"
                    android:textColorHint="@color/gold"
                    android:layout_marginTop="@dimen/_6sdp"
                    app:backgroundTint="@color/gold"
                    android:fontFamily="@font/avenir_medium"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:inputType="text"
                    android:textColor="@color/gold"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11ssp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/building_name_layout"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/gold"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/avenir_medium"
                    android:gravity="center_vertical"
                    android:textStyle="normal"
                    android:textSize="@dimen/_12ssp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/enter_your_title"
                    android:textColorHint="@color/gold"
                    android:layout_marginTop="@dimen/_6sdp"
                    app:backgroundTint="@color/gold"
                    android:inputType="text"
                    android:fontFamily="@font/avenir_medium"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textColor="@color/gold"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11ssp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/street_area_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/title_layout"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/street_area"
                    android:textColor="@color/gold"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/avenir_medium"
                    android:gravity="center_vertical"
                    android:textStyle="normal"
                    android:textSize="@dimen/_12ssp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_street_area"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/enter_your_street_area"
                    android:textColorHint="@color/gold"
                    android:layout_marginTop="@dimen/_6sdp"
                    app:backgroundTint="@color/gold"
                    android:fontFamily="@font/avenir_medium"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:inputType="text"
                    android:textColor="@color/gold"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11ssp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/emirate_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/street_area_layout"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emirates"
                    android:textColor="@color/gold"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:fontFamily="@font/avenir_medium"
                    android:gravity="center_vertical"
                    android:textStyle="normal"
                    android:textSize="@dimen/_12ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_emirate"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:text="@string/select_country"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="@drawable/tv_divider_gold"
                    android:textColor="@color/gold"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11ssp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/avenir_medium"
                    android:drawablePadding="@dimen/_8sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    app:drawableEndCompat="@drawable/dark_brown_right_arrow" />
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cards_countries_listing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_6sdp"
                    app:strokeColor="@color/gold"
                    android:visibility="gone"
                    app:strokeWidth="@dimen/_1sdp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_countries_listing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@android:color/transparent"
                        android:padding="@dimen/_10sdp"/>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/set_as_default_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/emirate_layout">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_switch_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_as_default"
                    android:textColor="@color/gold"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:fontFamily="@font/avenir_medium"
                    android:gravity="center_vertical"
                    android:textStyle="normal"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="RelativeOverlap" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_alignParentEnd="true"
                    app:layout_constraintTop_toTopOf="@id/tv_switch_txt"
                    android:button="@drawable/selected_switch_on_off"
                    android:thumb="@null"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
                    android:scaleX="0.3"
                    android:scaleY="0.3"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/ll_toggle"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintTop_toBottomOf="@+id/view1"
                        android:id="@+id/iv_toggle_off"
                        android:src="@drawable/toggle_off"/>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_20sdp"
                        app:layout_constraintTop_toBottomOf="@+id/view1"
                        android:id="@+id/iv_toggle_on"
                        android:src="@drawable/toggle_on"
                        android:visibility="gone"/>
                </LinearLayout>

            </RelativeLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_save"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/curved_gold_filled_rect_box"
                android:text="@string/save"
                android:fontFamily="@font/avenir_45_book"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/_15sdp"
                android:textAllCaps="true"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/_30sdp"
                app:layout_constraintTop_toBottomOf="@id/set_as_default_layout"
                android:layout_marginTop="@dimen/_20sdp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>