<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    tools:context=".fragments.MyCards">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10ssp">
            <TextView
                android:id="@+id/tv_saved_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/saved_cards"
                android:textColor="@color/gold"
                android:fontFamily="@font/avenir_medium"
                android:textSize="@dimen/_12ssp"
                android:textStyle="normal"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_savedcards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_saved_cards"
                tools:itemCount="3"
                tools:listitem="@layout/cards_listing"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_8sdp"/>

            <TextView
                android:id="@+id/tv_saved_cards_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_savedcards"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/saved_cards"
                android:textColor="@color/gold"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/avenir_medium"
                android:textSize="@dimen/_15ssp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_edit_card"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_saved_cards_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/edit_card"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/curved_light_brown_filled_rect_box"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/avenir_medium"
                android:textSize="@dimen/_15ssp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_delete_card"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/delete_card"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/curved_light_brown_filled_rect_box"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/avenir_medium"
                android:textSize="@dimen/_15ssp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_add_new_card"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_delete_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/add_new_card"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/curved_gold_filled_rect_box"
                android:layout_marginTop="@dimen/_40sdp"
                android:fontFamily="@font/avenir_medium"
                android:textSize="@dimen/_15ssp"
                android:textStyle="normal"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>